@@ -32,15 +32,23 @@ reports, use three asterisks:
 
   break ***
 
+Work activities can also include a category name, e.g.:
+
+  project1: fixing bug #1234
+  project1: refactoring tessts
+  project2: fixing buildbot
+  sysadmining: upgrading work laptop
+
 GTimeLog displays all the things you've done today, and calculates the total
 time you spent working, the total time you spent "slacking", and the sum total
 for convenience. It also advises you how much time you still have to work today
 to get 8 hours of work done, and how much time is left just to have spent a
 workday at the office (the number of hours in a day is configurable in
-~/.gtimelog/gtimelogrc). There are two basic views: one shows all the
-activities in chronological order, with starting and ending times; while
-another groups all entries with the same into one activity and just shows the
-total duration.
+~/.gtimelog/gtimelogrc). There are three basic views: one shows all the
+activities in chronological order, with starting and ending times; another
+groups all entries with the same title into one activity and just shows
+the total duration; and a third one groups all entries from the same categories
+into one line with the total duration.
 
 At the end of the day you can send off a daily report by choosing File -> Daily
 Report.  A mail program (Mutt in a terminal, unless you have changed it in
